<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:padding="8dp"
        android:text="@string/app_designed_by"
        android:textColor="@color/gray_very_light"
        android:textSize="12sp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:id="@+id/scroll_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/card_about_1" />

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_about_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="@dimen/main_card_margin_horizontal"
                android:layout_marginRight="@dimen/main_card_margin_horizontal"
                android:layout_marginTop="@dimen/main_card_margin_vertical"
                android:background="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_card_about_2_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_margin"
                        android:text="@string/about_card2_title"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/view_card_about_2_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/main_background" />

                    <LinearLayout
                        android:id="@+id/ll_card_about_2_shop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:src="@drawable/ic_action_shop" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:text="@string/about_google_play"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_card_about_2_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:src="@drawable/ic_action_email" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:text="@string/about_email"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <!--<LinearLayout-->
                        <!--android:id="@+id/ll_card_about_2_git_hub"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:background="?android:selectableItemBackground"-->
                        <!--android:clickable="true"-->
                        <!--android:orientation="horizontal">-->

                        <!--<ImageView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_gravity="center_vertical"-->
                            <!--android:layout_margin="@dimen/text_margin"-->
                            <!--android:src="@drawable/github" />-->

                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_gravity="center_vertical"-->
                            <!--android:layout_margin="@dimen/text_margin"-->
                            <!--android:text="Connect on LinkedIn"-->
                            <!--android:textStyle="italic" />-->
                    <!--</LinearLayout>-->

                    <LinearLayout
                        android:id="@+id/ll_card_about_2_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:src="@drawable/ic_action_web" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="@dimen/text_margin"
                            android:text="@string/about_website"
                            android:textStyle="italic" />
                    </LinearLayout>



                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_about_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"

        android:src="@drawable/ic_share" />
</FrameLayout>